fix align in the css
fix the css.

--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -5,19 +5,90 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 120%;
+  font-family: Helvetica,sans-serif;
+
 }
 
-/* input type setting for labeling, submit, and reset */
-
-form {
+/* input form type setting for labeling, submit, and reset */
+h1,article{
+  margin-left: 12px;
+}
+h1{
+  position: relative;
+  z-index:1;
   text-align: right;
-  padding-right: 29%;
-  padding-top: 20%;
+  padding-right: 45%;
+  font-size: 30pt;
+  color:red;
+}
+div{
+  margin:2%;
+}
+article{
+position: relative;
+min-width: 700px;
+top:-2px;
+}
+label {
+  text-align: right;
+  width:55%;
+  display:inline-block;
+  color:brown;
+  font-size: 20pt;
+}
+input[type="text"]{
+  width: 25%;
+  padding: 1%;
+  border: none;
+  border-radius: 3px;
+  border-bottom: 5px brown solid;
+  background-color: orange;
+  color:white;
+  font-weight: bold;
+  font-size: 19pt;
+}
+div:last-child{
+  text-align: right;
+padding-right: 20%;
+
+}
+input[type="reset"],
+input[type="submit"]{
+    margin:3%;
+  padding:1.5%;
+  border: none;
+  border-radius: 3px;
+  border-bottom:4px brown solid;
+  font-weight: bold;
+  font-size:15pt;
+  background-color: red;
+  color: black;
+}
+section p{
+width: 80%;
+min-width: 700px;
+margin-left: 12px;
+padding:24px;
 }
 
-/* footer for icons */
+
+.icon {
+  list-style-type: none;
+  display: inline-block;
+  margin-left: 10px;
+}
+/* footer page for icons */
 
 footer {
   position: fixed;
   text-align: center;
+    bottom: 0;
+    clear: both;
+    width:100%;
+    padding-right:60%;
+    text-align:center;
+}
+footer li {
+  display: inline;
+  list-style: none;
 }
